S20: Using Gh-pages branch and fixing some issues on firefox

--- a/src/containers/ProductPage/ProductPage.scss
+++ b/src/containers/ProductPage/ProductPage.scss
@@ -48,6 +48,7 @@
       width: 67%;
     }
 
+    .product-page__title,
     .product-page__selector {
       width: calc(33% - 37px);
     }
