--- a/src/core-components/Dropdown/Dropdown.scss
+++ b/src/core-components/Dropdown/Dropdown.scss
@@ -18,5 +18,6 @@
     height: 44px;
     cursor: pointer;
     background-color: #fff;
+    border: 1px solid #e0e0e0;
   }
 }
